<resources>
    <string name="app_name">QuizAppByPawel</string>
    <string name="how_are_you">WHO ARE YOU?</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="quizzes">Quizzes</string>
    <string name="title_activity_teacher_base">TeacherBaseActivity</string>
    <string name="add_new_question_bank">Add New Question Bank</string>
    <string name="submit">Submit</string>
    <string name="create_new_quiz">Create New Quiz</string>
    <string name="quiz_id_input">Enter ID</string>
    <string name="quiz_name_input">Enter Quiz Name</string>
    <string name="create">Create</string>
    <string name="add_new_question">Add New Question</string>
    <string name="questions">Questions</string>
    <string name="question">Question</string>
    <string name="question_input">Enter Question</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="answer">Answer</string>
    <string name="delete">Delete</string>
    <string name="correctAnswer">Correct Answer:</string>
    <string name="correctAnswerSpinner">Correct Answer</string>
    <string name="congratulations">Congratulations!</string>
    <string name="congratulations_pt2">You have finished the quiz!</string>
    <string name="score">SCORE: </string>
    <string name="finish">Finish</string>
    <string name="add_field">Add Field</string>
    <string name="answer_input">Enter Answer</string>
    <string name="create_new_answer">Create Answer</string>
    <string name="home">Home</string>
    <string name="add_answer">Add New Answer</string>
    <string name="star">Star</string>
    <string name="search">Search</string>
    <string name="information">Information Dialog</string>
    <string name="close">Close</string>
    <string name="validation_status">Validation status icon</string>
</resources>