<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:background="@drawable/dialog_background">

    <EditText
        android:id="@+id/etQuizID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/quiz_id_input"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/etQuizName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/quiz_name_input"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create" />
    </LinearLayout>

</LinearLayout>